--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,2 @@
-appdirs==1.4.3
-btrfsutil==1.1.0
-CacheControl==0.12.5
-chardet==3.0.4
-colorama==0.4.1
-cycler==0.10.0
-distlib==0.2.8
-distro==1.4.0
-Django==2.2.1
-docopt==0.6.2
-feedparser==5.2.1
-gufw==18.10.0
-html5lib==1.0.1
-httplib2==0.12.1
-idna==2.8
-Jade-Application-Kit==1.3.5
-keyutils==0.5
-kiwisolver==1.1.0
-lensfun==0.3.2
-lightdm-gtk-greeter-settings==1.2.2
-lockfile==0.12.2
-matplotlib==3.0.3
-menulibre==2.2.0
-msgpack==0.6.1
-mugshot==0.4.1
-npyscreen==4.10.5
-numpy==1.16.3
-opencv-python==4.1.0.25
-packaging==19.0
-pacman-mirrors==4.14.2
-pandas==0.23.4
-pep517==0.5.0
-pexpect==4.6.0
-Pillow==6.0.0
-progress==1.5
-psutil==5.6.1
-ptyprocess==0.6.0
-pyalpm==0.8.5
-pycairo==1.18.0
-PyGObject==3.32.1
-pyparsing==2.4.0
-PyQt5==5.12.1
-PyQt5-sip==4.19.16
-python-dateutil==2.8.0
-python-distutils-extra==2.39
-pytoml==0.1.20
-pytz==2019.1
-pyxdg==0.26
-PyYAML==3.13
-pyzmq==18.0.1
-rangehttpserver==1.2.0
-regex==2019.4.14
-requests==2.21.0
-retrying==1.3.3
-scikit-learn==0.19.2
-scipy==1.1.0
-six==1.12.0
-sklearn==0.0
-sqlparse==0.3.0
-team==1.0
-udiskie==1.7.7
-ufw==0.36
-urllib3==1.24.2
-virtualenv==16.1.0
-webencodings==0.5.1
+opencv-python
+imutils
